<img loading=lazy> doesn't infer aspect ratio because of bug 1602047
Categories
(Core :: Layout, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox74 | --- | disabled |
| firefox75 | --- | verified |
| firefox76 | --- | verified |
People
(Reporter: emilio, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
There's no request, so we don't use the inferred aspect ratio... :(
| Assignee | ||
Comment 1•5 years ago
|
||
Comment 5•5 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 7•5 years ago
|
||
Comment on attachment 9132312 [details]
Bug 1621333 - Ensure aspect-ratio applies to lazy-loaded images. r=hiro,dholbert
Beta/Release Uplift Approval Request
- User impact if declined: Image lazy loading ships with 75, and this would cause jumpiness in pages using it unnecessarily.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: Open https://www.tunetheweb.com/experiments/test_image_ratios.html and ensure that the second image doesn't jump.
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Simple change specific to the lazy-loading case.
- String changes made/needed: none
| Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 8•5 years ago
|
||
Verified - Fixed in latest Nightly 76.0a1 (Build id: 20200316154314) using Windows 10 and Ubuntu 18.04.
Updated•5 years ago
|
Comment 9•5 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #7)
- List of other uplifts needed: none
What about bug 1621511?
| Assignee | ||
Comment 10•5 years ago
|
||
Well maybe, though it's a test-only change, and it doesn't seem to have helped all that much unfortunately looking at the latest comments...
Updated•5 years ago
|
Comment 11•5 years ago
|
||
Comment on attachment 9132312 [details]
Bug 1621333 - Ensure aspect-ratio applies to lazy-loaded images. r=hiro,dholbert
fix an issue with lazy loading before we enable it; approved for 75.0b6
Comment 12•5 years ago
|
||
| bugherder uplift | ||
Comment 13•5 years ago
|
||
Verified - Fixed in latest Beta 75.0b6 (Build id: 20200319224147) using Windows 10 and Ubuntu 18.04.
Updated•4 years ago
|
Description
•