Bug 1621333 - Ensure aspect-ratio applies to lazy-loaded images. r=hiro

Differential Revision: https://phabricator.services.mozilla.com/D66257